# rufler

./: .gitignore  README.md  pyproject.toml
examples/: rufler_flow.yml
examples/autonomous-background/: rufler_flow.yml
examples/md-prompts/: TASK.md  rufler_flow.yml
examples/md-prompts/agents/: architect.md  backend.md  qa.md  reviewer.md
examples/multi-task-autogen/: rufler_flow.yml
examples/multi-task-decompose/: rufler_flow.yml
examples/multi-task-group/: rufler_flow.yml
examples/multi-task-group/tasks/: backend.md  e2e.md  frontend.md
examples/nextjs-saas/: rufler_flow.yml
examples/python-fastapi/: rufler_flow.yml
examples/rust-cli/: rufler_flow.yml
rufler/: checks.py  cli.py  config.py  decomposer.py  follow.py  logwriter.py  orchestration.py  registry.py  run_steps.py  runner.py  stream_log.py  task_markers.py  templates.py  tokens.py
rufler/commands/: __init__.py  dashboard.py  inspect.py  lifecycle.py  monitor.py  ps.py  run.py  setup.py  tasks.py
rufler/config/: __init__.py  loader.py  models.py
rufler/process/: __init__.py  daemon.py  procs.py
rufler/skills/: __init__.py  display.py  install.py  skills_sh.py
rufler/tasks/: __init__.py  chain.py  deep_think.py  display.py  judge.py  report.py  resolve.py
rufler/tui/: __init__.py  dashboard.py  follow.py  table.py
tests/: test_basics.py  test_chain.py  test_deep_think.py  test_iterations.py
