[project]
name = "rufler"
version = "0.1.0"
description = "Python wrapper around ruflo for one-command AI agent orchestration"
requires-python = ">=3.9"
authors = [{ name = "john_f" }]
dependencies = [
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
rufler = "rufler.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rufler*"]
